Update .gitignore and remove binary files

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 
 ### DotnetCore ###
 # .NET Core build folders
-/bin
-/obj
+bin/
+obj/
 
 # Common node modules locations
-/node_modules
-/wwwroot/node_modules
+node_modules/
+wwwroot/node_modules/
 
 
 # End of https://www.gitignore.io/api/dotnetcore
+
+.vscode/
